# quantlab-ai

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  streamlit_app.py  vercel.json
api/: README.md  index.py
app/: globals.css  layout.js  page.js
docs/demo/: aapl_xgboost_benchmarks.json  aapl_xgboost_cross_validation.json  aapl_xgboost_summary.json  batch_xgboost_leaderboard.json
notebooks/: 01_exploration_template.ipynb
public/demo/: aapl_latest_signals.json  aapl_xgboost_benchmarks.json  aapl_xgboost_summary.json  batch_xgboost_leaderboard.json
src/quantlab_ai/: __init__.py  cli.py  config.py  pipeline.py
src/quantlab_ai/backtesting/: __init__.py  engine.py
src/quantlab_ai/data/: loader.py  repository.py
src/quantlab_ai/features/: builder.py  indicators.py
src/quantlab_ai/models/: base.py  classical.py  evaluator.py  lstm.py  registry.py
src/quantlab_ai/visualization/: plots.py
